# server-app-python-fastapi-postgresdb-docker

./: .coveragerc  .env.development  .env.test  .gitignore  Dockerfile.multi-stage  Makefile  README.md  alembic.ini  docker-compose.yml  poe_tasks.toml  pyproject.toml  pytest.ini  ruff.toml
db/migrations/: env.py
db/migrations/versions/: a93392128b80_.py
db/models/: default.py  user.py
scripts/: startup.sh
src/: main.py  server.py  server_error.py
src/api/components/health_check/: health_check_controller.py  health_check_mapper.py  health_check_models.py  health_check_service.py
src/api/components/user/: user_controller.py  user_mapper.py  user_models.py  user_repository.py  user_service.py
src/api/routers/: routers.py
src/api/shared/: api_error_response.py  api_pagination_response.py  unknown_type.py
src/api/utils/: api_error_handler.py  dict_to_obj.py
src/config/: config.py
src/container/: container.py
src/services/: api_pagination_service.py  db_service.py
tests/: conftest.py
tests/factories/: user_factory.py
tests/integration/api/components/health_check/: test_health_check_http.py
tests/integration/api/components/user/: test_user_http.py
tests/unit/api/components/health_check/: test_health_check_mapper.py  test_health_check_service.py
tests/unit/api/components/user/: test_user_mapper.py  test_user_repository.py  test_user_service.py
tests/unit/config/: test_config.py
tests/unit/container/: test_container.py
tests/unit/services/: test_api_pagination_service.py  test_db_service.py
