[tool.poetry]
name = "server-app-python-fastapi-postgresdb-docker"
version = "0.1.0"
description = "Server APP"
authors = ["icaroribeiro <icaroribeiro@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
email-validator = "^2.2.0"
dependency-injector = "^4.46.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
poethepoet = "^0.33.0"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.3"
httpx = "^0.28.1"
testcontainers = "^4.9.1"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
mock = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
